# python-template

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: bootstrap-template.yaml  ci.yaml
docs/: api.md  index.md
examples/: say_hi.py
project_name/: __init__.py
python_template/: greeter.py
scripts/: bootstrap_template.py
tests/: test_bootstrap_template.py  test_greeter.py
