[project]
name = "python-template"
version = "0.0.0"
description = "A simple template project."
authors = [{ name = "sbgaia", email = "42733642+sbgaia@users.noreply.github.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "BSD-2-Clause"

[project.optional-dependencies]
dev = [
    "radon>=6.0.1,<7",
    "lizard>=1.21.2,<2",
    "pre-commit>=4.5.1,<5",
    "mypy>=1.19.1,<2",
    "ruff>=0.15.6,<0.16",
    "tox>=4.50.1,<5",
    "pytest>=8.4.2,<9",
    "pytest-cov>=6.3.0,<7",
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.6.20,<10",
    "mkdocstrings[python]>=0.30.1,<0.31",
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.ruff]
# Google style uses 80 chars
line-length = 80
target-version = "py310"

[tool.ruff.lint]
# Google Python Style Guide compliant rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "D",      # pydocstyle (docstring conventions)
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
    "D105",   # missing docstring in magic method
    "D107",   # missing docstring in __init__
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",      # docstrings not required in tests
]

[tool.ruff.lint.pydocstyle]
# Google docstring convention
convention = "google"

[tool.ruff.lint.isort]
# Google style: absolute imports, sorted
known-first-party = ["python_template"]
force-single-line = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
